docs/7.56/md/abennews-610.md
  

* * *

AS ABAP Release 756, ©Copyright 2021 SAP SE. All rights reserved.

[ABAP - Keyword Documentation](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abenabap.htm) →  [ABAP - Release News](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abennews.htm) →  [News for Release 6.xx](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abennews-6.htm) → 

News for Release 6.10

Changes were made in the following areas as part of development in Release 6.20 of SAP Web Application Server:

The majority of these developments and changes are compatible with Release 4.6. More information about the incompatibilities between these two releases is available in SAP Note 367676 in the Online Service System.

-   [Unicode in Release 6.10](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abennews-610-unicode.htm)
-   [ABAP Objects in Release 6.10](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abennews-610-objects.htm)
-   [Object Services in Release 6.10](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abennews-610-object_services.htm)
-   [Internal Tables in Release 6.10](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abennews-610-tabellen.htm)
-   [Character Strings in Release 6.10](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abennews-610-strings.htm)
-   [File Interface in Release 6.10](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abennews-610-dataset.htm)
-   [Compiler in Release 6.10](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abennews-610-compiler.htm)
-   [Runtime and Load Size in Release 6.10](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abennews-610-kernel.htm)
-   [Type Concept in Release 6.10](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abennews-610-typen.htm)
-   [SQL and Updates in Release 6.10](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abennews-610-sql.htm)
-   [Exception Handling in Release 6.10](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abennews-610-exceptions.htm)
-   [Data References in Release 6.10](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abennews-610-referenzen.htm)
-   [Integrating JavaScript in Release 6.10](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abennews-610-javascript.htm)
-   [Debugger in Release 6.10](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abennews-610-debugger.htm)
-   [Coverage Analyzer in Release 6.10](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abennews-610-coverage.htm)
-   [List Processing in Release 6.10](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abennews-610-listen.htm)
-   [System Fields in Release 6.10](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abennews-610-system.htm)
-   [Further Changes in Release 6.10](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abennews-610-others.htm)

Earlier Changes in ABAP:

[News for Release 4.6C](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abennews-46a.htm)
[News for Release 4.6A](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abennews-46c.htm)
[News for Release 4.0 and 4.5](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abennews-40.htm)
[News for Release 3.0](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abennews-30.htm)
[Changes Before Release 3.0](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abennews-21.htm)

Continue
[Unicode in Release 6.10](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abennews-610-unicode.htm)
[ABAP Objects in Release 6.10](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abennews-610-objects.htm)
[Object Services in Release 6.10](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abennews-610-object_services.htm)
[Internal Tables in Release 6.10](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abennews-610-tabellen.htm)
[Character Strings in Release 6.10](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abennews-610-strings.htm)
[File Interface in Release 6.10](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abennews-610-dataset.htm)
[Compiler in Release 6.10](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abennews-610-compiler.htm)
[Runtime and Load Size in Release 6.10](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abennews-610-kernel.htm)
[Type Concept in Release 6.10](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abennews-610-typen.htm)
[SQL and Updates in Release 6.10](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abennews-610-sql.htm)
[Exception Handling in Release 6.10](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abennews-610-exceptions.htm)
[Data References in Release 6.10](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abennews-610-referenzen.htm)
[Integrating JavaScript in Release 6.10](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abennews-610-javascript.htm)
[Debugger in Release 6.10](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abennews-610-debugger.htm)
[Coverage Analyzer in Release 6.10](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abennews-610-coverage.htm)
[List Processing in Release 6.10](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abennews-610-listen.htm)
[System Fields in Release 6.10](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abennews-610-system.htm)
[Further Changes in Release 6.10](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abennews-610-others.htm)